 * Tag input fields now accept spaces in tags by default, and can be overridden with the `TAG_SPACES_ALLOWED` setting (Kees Hink, Alex Gleason)
 * Page chooser widgets now display the required page type where relevant (Christine Ho)
 * Site root pages are now indicated with a globe icon in the explorer listing (Nick Smith, Huub Bouma)
 * Fix: Marked 'Date from' / 'Date to' strings in wagtailforms for translation (Vorlif)
 * Fix: "File" field label on image edit form is now translated (Stein Strindhaug)
 * Fix: Unreliable preview is now reliable by always opening in a new window (Kjartan Sverrisson)
 * Fix: Fixed placement of `{{ block.super }}` in `snippets/type_index.html` (LB (Ben Johnston))
 * Fix: Optimised database queries on group edit page (Ashia Zawaduk)
 * Fix: Choosing a popular search term for promoted search results now works correctly after pagination (Janneke Janssen)
 * Fix: IDs used in tabbed interfaces are now namespaced to avoid collisions with other page elements (Janneke Janssen)
 * Fix: Page title not displaying page name when moving a page (Trent Holliday)
 * Fix: The ModelAdmin module can now work without the wagtailimages and wagtaildocs apps installed (Andy Babic)
 * Fix: Cloudflare error handling now handles non-string error responses correctly (hdnpl)
 * Fix: Search indexing now uses a defined query ordering to prevent objects from being skipped (Christian Peters)
 * Fix: Ensure that number localisation is not applied to object IDs within admin templates (Tom Hendrikx)
 * Fix: Paginating with a search present was always returning the 1st page in Internet Explorer 10 & 11 (Ralph Jacobs)
 * Fix: RoutablePageMixin and wagtailforms previews now set the `request.is_preview` flag (Wietze Helmantel)
 * Fix: The save and preview buttons in the page editor are now mobile-friendly (Maarten Kling)
 * Fix: Page links within rich text now respect custom URLs defined on specific page models (Gary Krige, Huub Bouma)